options/options.css
*,
*:before,
*:after {
	box-sizing: border-box;
}

html {
	font-size: 16px;
	background: #000;
}

body {
	margin: 0 auto;
	padding: 0 1rem;
	font: 1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
	color: #c6d4df;
	background: #1b2838;
	width: 34rem;
}

@media (min-width: 800px) {
	body {
		margin: 2rem auto;
	}
}

h1, h2, h3, h4 {
	margin: 0 0 .5rem;
	font-weight: normal;
	line-height: 1;
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2.5rem;
}

h3 {
	margin-top: 3rem;
	font-size: 1.75rem;
	margin-left: -1rem;
	margin-right: -1rem;
	padding: .5rem 1rem;
	color: #fff;
	background-color: #0197cf;
	text-shadow: 1px 2px 0 #1b2838;
	text-align: center;
	text-transform: uppercase;
}

h4 {
	font-size: 1.25rem;
}

h3:first-child {
	margin-top: 0;
}

p {
	margin: 0 0 1rem;
}

.muted {
	font-size: 80%;
	color: #999;
}

.container {
	max-width: 35rem;
	margin-left: auto;
	margin-right: auto;
}

.footer {
	background: #121212;
	margin-top: 3rem;
	margin-left: -1rem;
	margin-right: -1rem;
	padding: 2rem 0;
	text-align: center;
	border-top: 1px solid #0197cf;
	color: #34c8fe;
}

.footer a {
	color: inherit;
}

.footer a:hover {
	color: #fff;
}

.footer p {
	margin-bottom: .5rem;
}

.checkbox {
	display: block;
}

.checkbox-sub {
	margin-left: 1.5rem;
}

